# alcosto

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_triggers_inmutabilidad.py  003_seed_admin_user.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  admin_user.py  base.py  category.py  customer.py  order.py  order_item.py  product.py
apps/api/app/repositories/: __init__.py  order_repo.py  product_repo.py
apps/api/tests/: test_t2_schema.py  test_t4_integration.py
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
docs/: PLAN.md  SPEC.md  handoff-actual.md
