[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alcosto-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "boto3",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "testcontainers[postgres]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
